Adjustments and add more tests
