# api-gateway/application/dto/rateDTO.go
@@ -1,6 +1,6 @@
 package dto
 
 type RateDTO struct {
-	UserUuid string `json:"user_uuid,omitempty"`
-	Rate float64 `json:"rate,omitempty"`
+	UserUuid string `json:"user_uuid"`
+	Rate float64 `json:"rate"`
 }
