# api-gateway/application/dto/recommendationDTO.go
@@ -1,6 +1,6 @@
 package dto
 
 type RecommendationDTO struct {
-	BookUuid string `json:"book_uuid,omitempty"`
-	Rate float64 `json:"rate,omitempty"`
+	BookUuid string `json:"book_uuid"`
+	Rate float64 `json:"rate"`
 }
