# api-gateway/infra/router/router.go
@@ -16,7 +16,7 @@ type Logger struct {
 
 func (logger *Logger) LoggerMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		// log.Printf(r.Header["Authorization"])
+		log.Println(r.Header["Authorization"])
 		log.Printf(logger.Format, r.RequestURI)
 
 		// call next handler
@@ -37,9 +37,9 @@ func GetRouter() *mux.Router {
 func InjectRoutes(router *mux.Router, grpcClient adapter.GrpcClient, amqpClient *adapter.AmqpClient) {
 	// users routes
 	router.Path("/v1/user").HandlerFunc(controller.CreateUser(grpcClient)).Methods("POST")
-	router.Path("/v1/user/{uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.GetUser(grpcClient)).Methods("GET")
-	router.Path("/v1/user/{uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.UpdateUser(grpcClient)).Methods("PUT")
-	router.Path("/v1/user/{uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.DeleteUser(grpcClient)).Methods("DELETE")
+	router.Path("/v1/user/{user_uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.GetUser(grpcClient)).Methods("GET")
+	router.Path("/v1/user/{user_uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.UpdateUser(grpcClient)).Methods("PUT")
+	router.Path("/v1/user/{user_uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.DeleteUser(grpcClient)).Methods("DELETE")
 	router.Path("/v1/user").Queries("page", "{page}", "size", "{size}").HandlerFunc(controller.ListUser(grpcClient)).Methods("GET")
 
 	// users rates routes
@@ -50,11 +50,11 @@ func InjectRoutes(router *mux.Router, grpcClient adapter.GrpcClient, amqpClient 
 
 	// books routes
 	router.Path("/v1/book").HandlerFunc(controller.CreateBook(amqpClient)).Methods("POST")
-	router.Path("/v1/book/{uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.GetBook(amqpClient)).Methods("GET")
-	router.Path("/v1/book/{uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.UpdateBook(amqpClient)).Methods("PUT")
-	router.Path("/v1/book/{uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.DeleteBook(amqpClient)).Methods("DELETE")
+	router.Path("/v1/book/{book_uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.GetBook(amqpClient)).Methods("GET")
+	router.Path("/v1/book/{book_uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.UpdateBook(amqpClient)).Methods("PUT")
+	router.Path("/v1/book/{book_uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.DeleteBook(amqpClient)).Methods("DELETE")
 	router.Path("/v1/book").Queries("page", "{page}", "size", "{size}").HandlerFunc(controller.ListBook(amqpClient)).Methods("GET")
 
 	// recommendations routes
-	router.Path("/v1/recommendation/user/{uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.GetRecommendation(amqpClient)).Methods("GET")
+	router.Path("/v1/recommendation/user/{user_uuid:[a-zA-Z0-9]{24}}").HandlerFunc(controller.GetRecommendation(grpcClient, amqpClient)).Methods("GET")
 }
